# gba-accuracy-tests

./: .gitignore  ACKNOWLEDGEMENTS.md  BIOS.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  compare.py  pyproject.toml  schema.md
.github/workflows/: ci.yml  sweep.yml
docs/dashboard/: contested.html  index.html  style.css  suite-ags-aging.html  suite-armwrestler.html  suite-fuzzarm.html  suite-jsmolka.html  suite-mgba-suite.html  unverified.html
runners/: TEMPLATE.py  __init__.py  _dispatch.py  cable_club.py  libretro_host.py  mgba.py  nanoboyadvance.py  skyemu.py
runners/cores/: .gitignore  gba_bios_cleanroom.commit  gba_bios_cleanroom.sha256  mgba_libretro.sha256  nba_headless.sha256
scripts/: build_dashboard.py  download_roms.py  generate_refs.py  mgba_capture.lua  populate_expected.py  promote_tiers.py  sweep_all.py  verify_refs.py
suites/ags-aging/: expected.toml  manifest.toml  references.json  references_status.json  verified.json
suites/armwrestler/: expected.toml  manifest.toml  references.json  references_status.json  verified.json
suites/fuzzarm/: expected.toml  manifest.toml  references.json  references_status.json  verified.json
suites/jsmolka/: expected.toml  manifest.toml  references.json  references_status.json  verified.json
suites/mgba-suite/: expected.toml  manifest.toml  references.json  references_status.json  verified.json
suites/nba-hw-test/: manifest.toml
tests/: test_compare.py
