[project]
name = "gba-accuracy-tests"
version = "0.1.0"
description = "Automated accuracy testing for GBA emulators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/cadfan/gba-accuracy-tests"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
